--- a/Samples/SpaceShooter/SpaceShooter/SpaceShooter.csproj
+++ b/Samples/SpaceShooter/SpaceShooter/SpaceShooter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
@@ -16,6 +16,9 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Bass.Net">
+      <HintPath>bin\Debug\net6.0-windows\Bass.Net.dll</HintPath>
+    </Reference>
     <Reference Include="MonoGame.SpriteEngine">
       <HintPath>bin\Debug\net6.0-windows\MonoGame.SpriteEngine.dll</HintPath>
     </Reference>
